# chatbot-medical-assistant

./: .dockerignore  .env.docker  .env.host  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apps/configs/: db.py  logger.py  settings.py
apps/web/: agent.py  main.py  utils.py
apps/web/pages/: documents_management.py
